# signal-ingest

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  HANDOFF.md  LICENSE  PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  evals.yml
docs/adr/: 0001-four-store-architecture.md  0002-testcontainers-not-mocks.md  0003-llm-as-labeler.md  0004-observability-from-day-one.md  0005-pgvector-on-same-postgres.md  README.md
docs/phases/: phase-1.md  phase-2.md  phase-3.md
evals/: README.md
evals/datasets/failure_modes/: not_csv.csv
evals/datasets/happy/: ecommerce_orders_v1.csv  ecommerce_orders_v1.py  marketing_metrics_v1.csv  marketing_metrics_v1.py  signups_v1.csv  signups_v1.py
evals/suites/: conftest.py  test_failure_modes.py  test_plan_grading.py
services/ingest_api/: config.py  dependencies.py  main.py  metrics.py  queue.py  storage.py  uploads.py
services/mcp_server/: main.py
services/slackbot/: main.py
services/worker/: config.py  main.py  metrics.py  tasks.py
shared/cleaning/: __init__.py  apply.py  operations.py  plan.py  registry.py  resolver.py
shared/db/: session.py
shared/db/migrations/: env.py
shared/db/migrations/versions/: 0001_initial_files.py  0002_processing_jobs.py  0003_cleaning_plans.py
shared/db/repositories/: cleaning_plans.py  files.py  processing_jobs.py
shared/llm/: __init__.py  fingerprint.py  generator.py  pricing.py  validation.py
shared/models/: cleaning_plan_row.py  file.py  processing_job.py
shared/observability/: init.py
tests/: test_smoke.py
tests/integration/: conftest.py  test_llm_plan_cache.py  test_upload.py  test_worker.py
tests/unit/: test_cleaning_apply.py  test_fingerprint.py  test_plan_validation.py  test_pricing.py
