[project]
name = "signal-ingest"
version = "0.1.0"
description = "CSV ingestion + LLM-driven cleaning + MCP serving platform"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.104.1",
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    "duckdb>=1.5.3",
    "fastapi>=0.136.3",
    "fastmcp>=3.3.1",
    "httpx>=0.28.1",
    "langgraph>=1.2.1",
    "pgvector>=0.4.2",
    "polars>=1.41.0",
    "pydantic[email]>=2.13.4",
    "redis>=5.3.1",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
    "testcontainers[postgres,redis]>=4.13.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["^\\.venv/", "^build/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.uv]
package = false
